2008-08-05  Aidan Kehoe  <kehoea@parhasard.net>

	* HELLO: Encode the Arabic using UTF-8 sequences, not ISO-8859-6. 

2008-02-21  Stephen J. Turnbull  <stephen@xemacs.org>

	* README: Add descriptions of Daniel Polansky's icons.

2008-02-21  Daniel Polansky  <danielpolansky@gmail.com>

	Two images for one icon for XEmacs, one 16x16 and 32x32.
	Also, a Microsoft Windows icon file is attached.
	Itemized:
	- 16x16 icon in PNG
	- 32x32 icon in PNG
	- Both bundled as a Microsoft Windows icon.

	The images are modeled on XEmacs violet logotype, as found at
	http://www.xemacs.org/. The images are copyright (c) 2005 by
	Daniel Polansky, and licensed under GNU General Public Licence V2
	or later at your option.

	* xemacs-X-16.png:
	* xemacs-X-32.png:
	* xemacs-X.ico:
	New files.

2008-02-20  Stephen J. Turnbull  <stephen@xemacs.org>

	* README: Give more accurate descriptions of image files.

2007-12-26  Stephen J. Turnbull  <stephen@xemacs.org>

	* bundled-packages/README: Document restriction on --with-late-packages.

2007-12-23  Stephen J. Turnbull  <stephen@xemacs.org>

	* bundled-packages/README: Documentation for bundled packages.
	* bundled-packages/test.sh: Test suite for bundled packages.

2007-11-22  Vin Shelton  <acs@xemacs.org>

	* photos/vin.png:
	* photos/vinm.png: Updated.

2004-12-03  Shyamal Prasad  <shyamal@member.fsf.org>

	* xemacs.1: Now describe $HOME/.xemacs/init.el as the
        preferred init file. Fixed excessive space insertion 
        in the description of the '-vanilla' option

2007-09-19  Didier Verna  <didier@lrde.epita.fr>

	* photos/dv.png: Remove.
	* photos/didier.png: Add.

2007-07-28  Aidan Kehoe  <kehoea@parhasard.net>

	* unicode/unicode-consortium/BIG5.TXT:
	Don't map any characters to U+FFFD; for round trip compatibility,
	map those that were mapped to U+FFFD to the Unicode private use
	area.

2007-05-21  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.28 "fuki" is released.
