@@ -1,3 +1,5 @@
+-*- coding: iso-2022-7 -*-
+
 You need many fonts to read all.
 Please correct this incomplete list and add more!
 
